// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Golden master: GET /api/production/orders (listado) Lista todas las órdenes (sin filtro) con paginación 1`] = `
{
  "data": [
    {
      "accept_second_quality_for_fulfillment": null,
      "additional_costs": null,
      "additional_costs_notes": null,
      "blended_cost_per_kg": null,
      "cancelled_at": null,
      "cancelled_by": null,
      "close_reason": null,
      "close_was_partial": false,
      "closed_by_user_id": null,
      "completed_at": null,
      "cost_per_unit": null,
      "created_at": "<TIMESTAMP>",
      "created_by": "<UUID>",
      "custom_attributes": null,
      "delivery_date": null,
      "expected_scrap_pct": null,
      "id": "<UUID>",
      "length_mm": null,
      "line_id": 1,
      "notes": "Orden de prueba 1",
      "order_number": "<ORDER_NUMBER>",
      "priority": "urgente",
      "priority_changed_at": null,
      "product_id": "<UUID>",
      "product_name": "Esquinero PP Test",
      "progress_pct": "0.0",
      "quantity_packages": 10,
      "quantity_units": 500,
      "raw_material_id": "<UUID>",
      "raw_material_name": "PP Virgen Test",
      "real_mp_kg": null,
      "recipe_id": null,
      "recipe_version_at_creation": null,
      "released_at": "<TIMESTAMP>",
      "released_by": "<UUID>",
      "resin_type": "PP",
      "sku": "TEST-PROD-001",
      "sort_order": 10,
      "status": "released",
      "tenant_id": "<UUID>",
      "theoretical_mp_kg": null,
      "total_cost": null,
      "units_produced": "0",
      "updated_at": "<TIMESTAMP>",
    },
    {
      "accept_second_quality_for_fulfillment": null,
      "additional_costs": null,
      "additional_costs_notes": null,
      "blended_cost_per_kg": null,
      "cancelled_at": null,
      "cancelled_by": null,
      "close_reason": null,
      "close_was_partial": false,
      "closed_by_user_id": null,
      "completed_at": null,
      "cost_per_unit": null,
      "created_at": "<TIMESTAMP>",
      "created_by": "<UUID>",
      "custom_attributes": null,
      "delivery_date": null,
      "expected_scrap_pct": null,
      "id": "<UUID>",
      "length_mm": null,
      "line_id": 1,
      "notes": "Orden de prueba 2",
      "order_number": "<ORDER_NUMBER>",
      "priority": "alta",
      "priority_changed_at": null,
      "product_id": "<UUID>",
      "product_name": "Esquinero PP Test",
      "progress_pct": "0.0",
      "quantity_packages": 15,
      "quantity_units": 750,
      "raw_material_id": "<UUID>",
      "raw_material_name": "PP Virgen Test",
      "real_mp_kg": null,
      "recipe_id": null,
      "recipe_version_at_creation": null,
      "released_at": "<TIMESTAMP>",
      "released_by": "<UUID>",
      "resin_type": "PP",
      "sku": "TEST-PROD-001",
      "sort_order": 20,
      "status": "released",
      "tenant_id": "<UUID>",
      "theoretical_mp_kg": null,
      "total_cost": null,
      "units_produced": "0",
      "updated_at": "<TIMESTAMP>",
    },
    {
      "accept_second_quality_for_fulfillment": null,
      "additional_costs": null,
      "additional_costs_notes": null,
      "blended_cost_per_kg": null,
      "cancelled_at": null,
      "cancelled_by": null,
      "close_reason": null,
      "close_was_partial": false,
      "closed_by_user_id": null,
      "completed_at": null,
      "cost_per_unit": null,
      "created_at": "<TIMESTAMP>",
      "created_by": "<UUID>",
      "custom_attributes": null,
      "delivery_date": null,
      "expected_scrap_pct": null,
      "id": "<UUID>",
      "length_mm": null,
      "line_id": 1,
      "notes": "Orden de prueba 3",
      "order_number": "<ORDER_NUMBER>",
      "priority": "normal",
      "priority_changed_at": null,
      "product_id": "<UUID>",
      "product_name": "Esquinero PP Test",
      "progress_pct": "0.0",
      "quantity_packages": 20,
      "quantity_units": 1000,
      "raw_material_id": "<UUID>",
      "raw_material_name": "PP Virgen Test",
      "real_mp_kg": null,
      "recipe_id": null,
      "recipe_version_at_creation": null,
      "released_at": null,
      "released_by": null,
      "resin_type": "PP",
      "sku": "TEST-PROD-001",
      "sort_order": 30,
      "status": "draft",
      "tenant_id": "<UUID>",
      "theoretical_mp_kg": null,
      "total_cost": null,
      "units_produced": "0",
      "updated_at": "<TIMESTAMP>",
    },
  ],
  "limit": 50,
  "page": 1,
  "total": 3,
}
`;

exports[`Golden master: GET /api/production/orders/:id (detalle) Devuelve detalle completo con campos calculados 1`] = `
{
  "accept_second_quality_for_fulfillment": null,
  "additional_costs": null,
  "additional_costs_notes": null,
  "blended_cost_per_kg": null,
  "cancelled_at": null,
  "cancelled_by": null,
  "close_reason": null,
  "close_was_partial": false,
  "closed_by_user_id": null,
  "completed_at": null,
  "cost_per_kg": "25.5000",
  "cost_per_unit": null,
  "created_at": "<TIMESTAMP>",
  "created_by": "<UUID>",
  "custom_attributes": null,
  "delivery_date": null,
  "expected_scrap_pct": null,
  "id": "<UUID>",
  "length_mm": null,
  "line_id": 1,
  "mpFormula": [],
  "notes": "Orden de prueba 1",
  "order_number": "<ORDER_NUMBER>",
  "priority": "urgente",
  "priority_changed_at": null,
  "product_id": "<UUID>",
  "product_name": "Esquinero PP Test",
  "quantity_packages": 10,
  "quantity_units": 500,
  "raw_material_id": "<UUID>",
  "raw_material_name": "PP Virgen Test",
  "real_mp_kg": null,
  "recipe_id": null,
  "recipe_version_at_creation": null,
  "released_at": "<TIMESTAMP>",
  "released_by": "<UUID>",
  "resin_type": "PP",
  "sku": "TEST-PROD-001",
  "sort_order": 10,
  "status": "released",
  "tenant_id": "<UUID>",
  "theoretical_mp_kg": null,
  "total_cost": null,
  "updated_at": "<TIMESTAMP>",
}
`;
